Started implementing a state machine

--- a/round-3/game-2/cereal-game-phaser/gms2phaser.config.json
+++ b/round-3/game-2/cereal-game-phaser/gms2phaser.config.json
@@ -1,9 +1,11 @@
 {
     "gms2ProjectDir": "../cereal-game-gms2",
     "sprites": [
+        "spr_player"
     ],
     "tilesets": [
     ],
     "rooms": [
+        "world1"
     ]
 }
