--- a/round-3/game-2/cereal-game-phaser/tsconfig.json
+++ b/round-3/game-2/cereal-game-phaser/tsconfig.json
@@ -1,10 +1,10 @@
 {
     "compilerOptions": {
         "module": "commonjs",
-        "target": "es5",
+        "target": "es2015",
         "sourceMap": true,
         "lib": [
-            "es2015",
+            "esnext",
             "dom"
         ]
     },
